<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/AppToolbarStyle"
        android:id="@+id/recipeToolbar"
        app:navigationIcon="@drawable/arrow_back_24px"
        app:menu="@menu/recipe_app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeToolbar">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/recipe_image_card"
                    style="@style/RecipeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/recipe_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/recipe_image_desc"
                        android:scaleType="centerCrop" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    style="@style/RecipeTitle"
                    android:id="@+id/recipe_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />

                <TextView
                    style="@style/RecipeDescription"
                    android:id="@+id/recipe_short_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_desc" />

                <TextView
                    style="@style/RecipeFullDescription"
                    android:id="@+id/recipe_full_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_desc" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
